# RayTracer-1

./: .gitignore  CMakeLists.txt  Readme.md  pic1.ppm  pic4.ppm  ray1.py
craytracer/: CMakeLists.txt  main.c
craytracer/include/: camera.h  color.h  hitRecord.h  material.h  outfile.h  poolAllocator.h  ray.h  sphere.h  types.h  util.h
craytracer/sources/: allocator.c  camera.c  color.c  hitRecord.c  material.c  outfile.c  poolAllocator.c  ray.c  sphere.c  util.c
images/: pic2.ppm  pic6.ppm  pic7.ppm
include/: camera.h  hitRecord.h  sphere.h
libs/include/: hypatia.h
source/: CMakeLists.txt  main.c
source/include/: outfile.h  util.h
source/src/: hitRecord.c  sphere.c  util.c
src/: camera.c  main.c  outfile.c  util.c
test/: CMakeLists.txt  util_test.c
tests/: CMakeLists.txt  camera_test.c  color_test.c  hitRecord_test.c  material_test.c  ray_test.c  sphere_test.c  testutils.h  util_test.c
